assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Roboto&display=swap');

/* --------------------------------------------------------------------------Body structure */

html, body {
    margin: 0;
    padding: 0;
    /* Got help from Stack Overflow to disable the horizontal scroll */
    max-width: 100%;
    overflow-x: hidden;
    /* /Got help from Stack Overflow to disable the horizontal scroll */
}

/* --------------------------------------------------------------------------Body font styles */

body {
    font-family: 'Roboto', sans-serif;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Major Mono Display', monospace;
}

/* --------------------------------------------------------------------------Body colours */

body {
    background-color: #131111;
    color: blanchedalmond;
}

.highlight-letter {
    color: #b288ca;
}

.btn-purple {
    color: blanchedalmond;
    background-color: #9f5dc5;
    border-color: #24152c;
    font-size: 1rem;
}

.btn-purple:hover {
    color: #9f5dc5;
    background-color: blanchedalmond;
    border-color: wheat;
}

/* --------------------------------------------------------------------------Header section */

.header-container {
    margin: 20px 30px;
    padding: 0;
    max-width: 100%;
}

.nav-container {
    padding: 0;
    margin: 15px 80px;
    float: right;
}

header div a {
    text-decoration: none;
    color: blanchedalmond;
    float: left;
}

nav a {
    text-decoration: none;
    color: blanchedalmond;
    padding: 0 10px;
}

nav ul {
    list-style: none;
}

li {
    display: inline-block;
}

nav a:hover {
    color: #b288ca;
}

div a h1 {
    font-size: 2.4rem;
}

div a h1:hover {
    color: #b288ca;
}

.collapse-navbar {
    display: none;
}

@media screen and (max-width: 1199px) {

    .full-navbar {
        display: none;
    }

    .collapse-navbar {
        display: block;
        float: right;
    }

    .nav-container-collapse {
        margin-top: 40px;
        float: right;
        min-width: 25px;
        max-width: 25px;
    }

    .navbar-dark .navbar-toggler {
        color: #b288ca;
    }
    
    .navbar-dark {
        float: right;
        margin: 3px 40px;
    }
}

@media screen and (max-width: 385px) {

    .full-navbar {
        display: none;
    }

    .collapse-navbar {
        display: block;
        float: right;
    }

    .navbar-dark .navbar-toggler {
        color: #b288ca;
    }
    
    .navbar-dark {
        float: right;
        margin: 3px 40px;
    }
}

/* --------------------------------------------------------------------------Hero section */

.full-callout-container {
    display: block;
}

.book-btn {
    margin: 10px;
}

.full-callout-container {
    position: relative;
    background-color: rgba(0, 0, 0, 0.7);
    max-height: 75vh;
    min-height: 75vh;
    padding: 10% 0;
    z-index: 2;
}

.full-callout-container h2 {
    font-size: 8.7rem;
}

/* Code to make sure that the background image is covered on all browsers was taken from CSS Tricks */
.hero-bg {
    background: url(../images/hero-image.jpg) no-repeat bottom right fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 75vh;
    text-align: center;
    width: 100%;
    z-index: 1;
}
/* /Code to make sure that the background image is covered on all browsers was taken from CSS Tricks */

mark {
    font-size: 85%;
    background-color: burlywood;
    margin-bottom: 20%;
}

.callout-container {
    display: none;
}

@media screen and (max-width: 1200px) {

    .full-callout-container h2 {
        font-size: 7.8rem;
    }

}

@media screen and (max-width: 992px) {

    .hero-bg {
        display: none;
    }

    .callout-container {
        display: block;
        text-align: center;
        margin: 20px 0;
    }

    .callout-container h2 {
        font-size: 6.5rem;
    }

}

@media screen and (max-width: 576px) {

    .hero-bg {
        display: none;
    }

    .callout-container {
        display: block;
        text-align: center;
        margin: 20px 0;
    }

    .callout-container h2 {
        font-size: 4.6rem;
    }

}

@media screen and (max-width: 280px) {

    .callout-container h2 {
        font-size: 4rem;
    }

}

/* --------------------------------------------------------------------------Modal section */

.modal-body {
    color: blanchedalmond;
    background-color: #131111;
}

.modal-header {
    background-color: #131111;
    border-color: blanchedalmond;
}

.modal-title {
    color: blanchedalmond;
    text-align: center;
}

/* --------------------------------------------------------------------------Review section */

.cust-reviews {
    margin: 35px 20px;
    text-align: center;
}

.fa-quote-right {
    font-size: 200%;
    margin-bottom: 2.5%;
}

.carousel-inner p {
    width: 1rem;
}

.fa-hand-scissors {
    color: #b288ca;
}

#carouselExampleIndicators {
    min-height: 15rem;
    max-height: 15rem;
}

@media screen and (max-width: 888px) {

    #carouselExampleIndicators {
        min-height: 17rem;
        max-height: 17rem;
    }

}

@media screen and (max-width: 576px) {

    #carouselExampleIndicators {
        min-height: 18rem;
        max-height: 18rem;
    }

    .carousel-item {
        font-size: 0.95rem;
    }

}

@media screen and (max-width: 460px) {

    #carouselExampleIndicators {
        min-height: 19rem;
        max-height: 19rem;
    }

    .carousel-item {
        font-size: 0.75rem;
    }

}

@media screen and (max-width: 290px) {

    #carouselExampleIndicators {
        min-height: 20rem;
        max-height: 20rem;
    }

    .carousel-item {
        font-size: 0.7rem;
    }

}

/* --------------------------------------------------------------------------Footer section */

footer {
    position: relative;
    margin-top: 100px;
    clear: both;
}

footer h3 {
    margin-bottom: 20px;
}

.contact-footer {
    text-align: center;
}
/* ... */

